crates/keron-lang/tests/corpus/errors/check/fn_val_fn_name_collision.snap
---
source: crates/keron-lang/tests/harness/mod.rs
---
error: `foo` is already defined
  --> 3:4
  |
3 | fn foo(): Int {
  |    ^^^
